// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action generators signup matches snapshot 1`] = `
Object {
  "payload": Object {
    "api": Object {
      "method": "post",
      "params": Object {
        "email": "b",
        "email_validated": true,
        "login": true,
        "name": "a",
        "password": "c",
      },
      "path": "/noo/user",
    },
  },
  "type": "SignupFlow/SIGNUP",
}
`;

exports[`action generators updateLocalUserSettings matches snapshot 1`] = `
Object {
  "payload": Object {
    "email": "b",
    "name": "a",
    "password": "c",
  },
  "type": "SignupFlow/UPDATE_LOCAL_USER_SETTINGS",
}
`;

exports[`action generators updateUserSettings matches snapshot 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($changes: MeInput) {
        updateMe(changes: $changes) {
          id
          name
          email
          location
          locationObject {
            id
            addressNumber
            addressStreet
            bbox {
              lat
              lng
            }
            center {
              lat
              lng
            }
            city
            country
            fullText
            locality
            neighborhood
            region
          }
          avatarUrl
          facebookUrl
          twitterName
          intercomHash
          skills (first: 100) {
            total
            hasMore
            items {
              id
              name
            }
          }
          settings {
            signupInProgress
            dmNotifications
          }
        }
      }",
    "variables": Object {
      "changes": Object {
        "email": "b",
        "name": "a",
        "password": "c",
      },
    },
  },
  "meta": Object {
    "changes": Object {
      "email": "b",
      "name": "a",
      "password": "c",
    },
    "optimistic": true,
  },
  "type": "UPDATE_USER_SETTINGS",
}
`;
